<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300px"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView_Form"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="60dp"
                    android:background="@mipmap/user_background"
                    android:foregroundGravity="center" />

                <Button
                    android:id="@+id/button_reset_photo_Form"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="80dp"
                    android:text="@string/reset_photo" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageSpinner_Form"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:srcCompat="@android:drawable/ic_menu_week" />

                <Spinner
                    android:id="@+id/spinner_Form"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/weekday" />

                <Button
                    android:id="@+id/add_spinner"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@android:drawable/ic_menu_add" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/date_form"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                app:layout_constraintBottom_toTopOf="@+id/switch_food_Form"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_date_form">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TEI_date_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date"
                    android:inputType="date" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView_date_form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/date_format"
                app:layout_constraintBottom_toTopOf="@+id/date_form"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_Form" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_food_Form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/food"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/phone_form"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_form" />

            <ImageView
                android:id="@+id/imageDate_Form"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageSpinner_Form"
                app:srcCompat="@android:drawable/ic_menu_month" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_form"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                app:layout_constraintBottom_toTopOf="@+id/email_form"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switch_food_Form">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TEI_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/image_phone_Form"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="45dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                app:srcCompat="@android:drawable/stat_sys_phone_call" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_form"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                app:layout_constraintBottom_toTopOf="@+id/address_form"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone_form">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TEI_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/e_mail" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/image_email_Form"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="56dp"
                app:srcCompat="@android:drawable/ic_dialog_email" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address_form"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TEI_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/image_address_Form"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="56dp"
                app:srcCompat="@android:drawable/ic_dialog_map" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/affiliate_number_form"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TEI_affiliate_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/affiliate_number" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/image_AN_Form"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="56dp"
                app:srcCompat="@android:drawable/ic_menu_myplaces" />

            <Button
                android:id="@+id/Cancel_Form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/delete" />

            <Button
                android:id="@+id/Save_Form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/save" />

            <Button
                android:id="@+id/date_picker"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="45dp"
                android:layout_marginEnd="34dp"
                android:background="@android:drawable/ic_menu_today" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="25dp"
                app:srcCompat="@drawable/food" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>