<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backscreen"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_reset_photo_Form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:text="@string/reset_photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imageView_Form"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView_Form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:background="@mipmap/ic_launcher"
                android:foregroundGravity="center"
                app:layout_constraintEnd_toStartOf="@+id/button_reset_photo_Form"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spinner_Form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="168dp"
                android:text="@string/weekday"
                app:layout_constraintBottom_toTopOf="@+id/textView_date_form"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/date_form"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                app:layout_constraintBottom_toTopOf="@+id/switch_food_Form"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_date_form">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TEI_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date"
                    android:inputType="date" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView_date_form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/date_format"
                app:layout_constraintBottom_toTopOf="@+id/date_form"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_Form" />

            <Switch
                android:id="@+id/switch_food_Form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/food"
                android:textSize="14dp"
                app:layout_constraintBottom_toTopOf="@+id/phone_form"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.481"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_form" />

            <ImageView
                android:id="@+id/imageDate_Form"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:layout_marginStart="23dp"
                android:layout_marginTop="45dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintEnd_toStartOf="@+id/date_form"
                app:layout_constraintHorizontal_bias="0.488"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageSpinner_Form"
                app:srcCompat="@android:drawable/ic_menu_month" />

            <ImageView
                android:id="@+id/imageSpinner_Form"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="30dp"
                app:layout_constraintEnd_toStartOf="@+id/spinner_Form"
                app:layout_constraintHorizontal_bias="0.833"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView_Form"
                app:srcCompat="@android:drawable/ic_menu_week" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_form"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                app:layout_constraintBottom_toTopOf="@+id/email_form"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switch_food_Form">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TEI_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/image_phone_Form"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_marginStart="23dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintEnd_toStartOf="@+id/phone_form"
                app:layout_constraintHorizontal_bias="0.396"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                app:srcCompat="@android:drawable/stat_sys_phone_call" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_form"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                app:layout_constraintBottom_toTopOf="@+id/address_form"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone_form">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TEI_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/e_mail" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/image_email_Form"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_marginStart="23dp"
                android:layout_marginTop="56dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintEnd_toStartOf="@+id/email_form"
                app:layout_constraintHorizontal_bias="0.566"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_phone_Form"
                app:srcCompat="@android:drawable/ic_dialog_email" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address_form"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                app:layout_constraintBottom_toTopOf="@+id/affiliate_number_form"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_form">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TEI_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/image_address_Form"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_marginStart="23dp"
                android:layout_marginTop="56dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintEnd_toStartOf="@+id/address_form"
                app:layout_constraintHorizontal_bias="0.604"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_email_Form"
                app:srcCompat="@android:drawable/ic_dialog_map" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/affiliate_number_form"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/address_form">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TEI_affiliate_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/affiliate_number" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/image_AN_Form"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_marginStart="23dp"
                android:layout_marginTop="56dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintEnd_toStartOf="@+id/affiliate_number_form"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_address_Form"
                app:srcCompat="@android:drawable/ic_menu_myplaces" />

            <Button
                android:id="@+id/Cancel_Form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/cancel"
                app:layout_constraintEnd_toStartOf="@+id/Save_Form"
                app:layout_constraintHorizontal_bias="0.509"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/affiliate_number_form" />

            <Button
                android:id="@+id/Save_Form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/save"
                app:layout_constraintEnd_toEndOf="@+id/Cancel_Form"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/affiliate_number_form" />

            <Button
                android:id="@+id/add_spinner"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="19dp"
                android:layout_marginTop="37dp"
                android:layout_marginEnd="74dp"
                android:background="@android:drawable/ic_menu_add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/spinner_Form"
                app:layout_constraintTop_toBottomOf="@+id/button_reset_photo_Form" />

            <Button
                android:id="@+id/date_picker"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="59dp"
                android:layout_marginEnd="34dp"
                android:background="@android:drawable/ic_menu_today"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/date_form"
                app:layout_constraintTop_toBottomOf="@+id/add_spinner" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="23dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="40dp"
                app:layout_constraintBottom_toTopOf="@+id/image_phone_Form"
                app:layout_constraintEnd_toStartOf="@+id/switch_food_Form"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageDate_Form"
                app:srcCompat="@drawable/food" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>